# BFRES_Lib

./: BFRES.cpp  BFRES.h  CMakeLists.txt  README.md
libSrc/BFRES/: BFRES.cpp  BFRES.h  res_bfres.hpp  res_bfresanimcurve.hpp  res_bfresbonevisibilityanim.hpp  res_bfresmaterial.hpp  res_bfresmaterialanim.hpp  res_bfresmodel.hpp  res_bfressceneanim.hpp  res_bfresshape.hpp  res_bfresshapeanim.hpp  res_bfresskeletalanim.hpp  res_bfresskeleton.hpp  res_gfxcommon.hpp  res_gfxtostring.hpp  res_nintendowaredictionary.hpp  res_nintendowarefileheader.hpp  res_nintendowarerelocationtable.cpp  res_nintendowarerelocationtable.h  res_nintendowarestringpool.hpp
libSrc/BFRES/subFRES/header/: Header.cpp  Header.h  LegacyHeader.cpp  LegacyHeader.h  ModernHeader.cpp  ModernHeader.h
libSrc/usefulFunctions/: UintReader.cpp  UintReader.h  fileOps.cpp  fileOps.h  fresMagicTouint64_t.h  usefulStructs.h
testSrc/: main.cpp  main.h
